--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
-									<h3>Ante sem integer</h3>
+									<h3>THIS IS A TEST</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>THIS IS A TEST</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
-									<h3>Ipsum consequat</h3>
+									<h3>THIS IS A TEST</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>THIS IS A TEST</p>
 							</div>
 						</section>
 						<section>
@@ -83,7 +83,7 @@
 									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
 									<h3>Interdum gravida</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>THIS IS A TEST</p>
 							</div>
 						</section>
 						<section>
