--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h1>Industrious</h1>
-					<p>A responsive business oriented template with a video background<br />
-					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
+					<p>A Programmer & Computer Scientist, Here is the  <a href="https://github.com/sandeepbeedh">GITHUB</a> link to my projects.</p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
