--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Industrious</h1>
-					<p>A Programmer & Computer Scientist, Here is the  <a href="https://github.com/sandeepbeedh">GITHUB</a> link to my projects.</p>
+					<h1>Sandeep Beedh  </h1>
+					<p>A Programmer & Computer Scientist, Here is the<a href="https://github.com/sandeepbeedh">GITHUB</a> link to my projects.</p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
