--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Sandeep Beedh  </h1>
-					<p>A Programmer & Computer Scientist, Here is the<a href="https://github.com/sandeepbeedh">GITHUB</a> link to my projects.</p>
+					<h1>Sandeep Beedh</h1>
+					<p>A Programmer and Computer Scientist, Here is the <a href="https://github.com/sandeepbeedh">GITHUB</a> link to my projects.</p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
@@ -41,15 +41,15 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2> THIS IS A TEST </h2>
-						<p>THIS IS A TEST</p>
+						<h2> Projects</h2>
+						<p>Overtime I have developed in many different langauges which consist from, C++ , HTML , CSS, JAVASCRIPT , PYTHON, R , C, SWIFT, ASSEMBLY, Java, Java Script.</p>
 					</header>
 					<div class="highlights">
 						<section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
-									<h3>THIS IS A TEST</h3>
+									<h3>Project 1 </h3>
 								</header>
 								<p>THIS IS A TEST</p>
 							</div>
@@ -58,7 +58,7 @@
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
-									<h3>THIS IS A TEST</h3>
+									<h3>Project 2</h3>
 								</header>
 								<p>THIS IS A TEST</p>
 							</div>
@@ -67,7 +67,7 @@
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
-									<h3>THIS IS A TEST</h3>
+									<h3>Project 3</h3>
 								</header>
 								<p>THIS IS A TEST</p>
 							</div>
@@ -76,7 +76,7 @@
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
-									<h3>Interdum gravida</h3>
+									<h3>Project 4</h3>
 								</header>
 								<p>THIS IS A TEST</p>
 							</div>
@@ -85,18 +85,18 @@
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
-									<h3>Faucibus consequat</h3>
+									<h3>Project 5 </h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>THIS IS A TEST</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Accumsan viverra</h3>
+									<h3>On going and incoming projects</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>THIS IS A TEST</p>
 							</div>
 						</section>
 					</div>
@@ -106,8 +106,8 @@
 		<!-- CTA -->
 			<section id="cta" class="wrapper">
 				<div class="inner">
-					<h2>Curabitur ullamcorper ultricies</h2>
-					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+					<h2>My intresets and Personal details.</h2>
+					<p>THIS IS A TEST</p>
 				</div>
 			</section>
 
