Index page changes

--- a/index.html
+++ b/index.html
@@ -49,27 +49,27 @@
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
-									<h3>Project 1 </h3>
+									<h3>Web Design & development</h3>
 								</header>
-								<p>THIS IS A TEST</p>
+								<p>Designing complex websites using Sql data bases, HTML, CSS ,JAVASCRIPT and wireframes in order to represent profeshinal layouts and usage</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
-									<h3>Project 2</h3>
+									<h3>Data Science</h3>
 								</header>
-								<p>THIS IS A TEST</p>
+								<p>Analysing large data sets in order to represent gathered data in a visualisation form, using the R language with a wide range and versatile of tools</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
-									<h3>Project 3</h3>
+									<h3>Big Data Programming Project</h3>
 								</header>
-								<p>THIS IS A TEST</p>
+								<p>Analysing the 02 layer over europe in matlab in order to represent the ozone layer and chages with in a 24 hour format</p>
 							</div>
 						</section>
 						<section>
