--- a/index.html
+++ b/index.html
@@ -76,27 +76,32 @@
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
-									<h3>Project 4</h3>
+									<h3>Participation in a Hackathon event & Global Game Jam Project</h3>
 								</header>
-								<p>THIS IS A TEST</p>
+								<p>With in the Hackathon I used Linux (Ubuntu distro) along side with wireshark in order to Analyse data packers on a network that where being transfered. With in the global games jam I produced a text based RPG programmed in C++.</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
-									<h3>Project 5 </h3>
+									<h3>International Competitions</h3>
 								</header>
-								<p>THIS IS A TEST</p>
+								<p>An event based in sweden where England, Germany and Sweden Participants, programmed a autonomous boats in a race around given coordinates.  </p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>On going and incoming projects</h3>
+									<h3>On going and incoming projects:</h3>
 								</header>
-								<p>THIS IS A TEST</p>
+								<p>
+									 •	Raspberry pi 
+									•	API calls 
+									•	Servers 
+									•	Android Development 
+								</p>
 							</div>
 						</section>
 					</div>
