--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>Faucibus consequat lorem</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<h2>My work colledges and testimonials </h2>
+						<p> </p>
 					</header>
 					<div class="testimonials">
 						<section>
