--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">Industrious</a>
+				<a class="logo" href="index.html">Reload Me</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -23,8 +23,8 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="generic.html">Generic</a></li>
+			<!--	<li><a href="elements.html">Elements</a></li>  -->
+					<li><a href="generic.html">More_about_me!</a></li>
 				</ul>
 			</nav>
 
@@ -32,7 +32,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h1>Sandeep Beedh</h1>
-					<p>A Programmer and Computer Scientist, Here is the <a href="https://github.com/sandeepbeedh">GITHUB</a> link to my projects.</p>
+					<p>A Computer Scientist, <a href="https://github.com/sandeepbeedh">GITHUB</a>.</p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
