--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<div class="inner">
 					<header class="special">
 						<h2> Projects</h2>
-						<p>Overtime I have developed in many different langauges which consist from, C++ , HTML , CSS, JAVASCRIPT , PYTHON, R , C, SWIFT, ASSEMBLY, Java, Java Script.</p>
+						<p>Over time I have developed in many different languages which consist of, C++, HTML, CSS, JAVASCRIPT, PYTHON, R, C, SWIFT, ASSEMBLY, Java, JavaScript.</p>
 					</header>
 					<div class="highlights">
 						<section>
@@ -51,7 +51,7 @@
 									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
 									<h3>Web Design & development</h3>
 								</header>
-								<p>Designing complex websites using Sql data bases, HTML, CSS ,JAVASCRIPT and wireframes in order to represent profeshinal layouts and usage</p>
+								<p>Designing complex websites using SQL databases, HTML, CSS, JAVASCRIPT, and wireframes in order to represent professional layouts and usage.</p>
 							</div>
 						</section>
 						<section>
@@ -60,7 +60,7 @@
 									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
 									<h3>Data Science</h3>
 								</header>
-								<p>Analysing large data sets in order to represent gathered data in a visualisation form, using the R language with a wide range and versatile of tools</p>
+								<p>Analyzing large data sets in order to represent gathered data in a visualization form, using the R language with a wide range and versatile of tools.</p>
 							</div>
 						</section>
 						<section>
@@ -69,7 +69,7 @@
 									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
 									<h3>Big Data Programming Project</h3>
 								</header>
-								<p>Analysing the 02 layer over europe in matlab in order to represent the ozone layer and chages with in a 24 hour format</p>
+								<p>Analyzing the 02 layers over Europe in MATLAB in order to represent the ozone layer and changes within a 24-hour format.</p>
 							</div>
 						</section>
 						<section>
@@ -78,7 +78,7 @@
 									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
 									<h3>Participation in a Hackathon event & Global Game Jam Project</h3>
 								</header>
-								<p>With in the Hackathon I used Linux (Ubuntu distro) along side with wireshark in order to Analyse data packers on a network that where being transfered. With in the global games jam I produced a text based RPG programmed in C++.</p>
+								<p>Within the Hackathon, I used Linux (Ubuntu distro) alongside with Wireshark in order to Analyse data packets on a network that were being transferred. In the global games jam, I produced a text-based RPG programmed in C++.</p>
 							</div>
 						</section>
 						<section>
@@ -87,7 +87,7 @@
 									<a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
 									<h3>International Competitions</h3>
 								</header>
-								<p>An event based in sweden where England, Germany and Sweden Participants, programmed a autonomous boats in a race around given coordinates.  </p>
+								<p>An event-based in Sweden where England, Germany, and Sweden Participants, programmed an autonomous boat in a race around given GPS coordinates.</p>
 							</div>
 						</section>
 						<section>
@@ -97,7 +97,7 @@
 									<h3>On going and incoming projects:</h3>
 								</header>
 								<p>
-									 •	Raspberry pi 
+									•	Raspberry pi 
 									•	API calls 
 									•	Servers 
 									•	Android Development 
