TESTI_IMG_CHANGES

--- a/index.html
+++ b/index.html
@@ -120,46 +120,46 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>My work colledges and testimonials </h2>
+						<h2>My work colleges and testimonials:</h2>
 						<p> </p>
 					</header>
 					<div class="testimonials">
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p></p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Jane Doe</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Luke Charles</strong> <span>Computer Scientist</span></p>
 								</div>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p></p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>John Doe</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Nav Gupta</strong> <span>CEO - ASN</span></p>
 								</div>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p></p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Janet Smith</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Ibukun Adegoke</strong> <span>Technician at NHS</span></p>
 								</div>
 							</div>
 						</section>
