--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 		<!-- CTA -->
 			<section id="cta" class="wrapper">
 				<div class="inner">
-					<h2>My intresets and Personal details.</h2>
-					<p>THIS IS A TEST</p>
+					<h2>My interests and Personal details:</h2>
+					<p>I am very enthusiastic about everything in tech, from the backend to the front-end UI.  My personal hobbies consist of programming to outdoor activities such as mountain climbing, where I have climbed England’s 3 peaks! I also love music and have a Youtube channel featuring over 2 million views, I also drum in my spare time where I consider myself to be semi-professional and have played in events featuring over 1000 people as an audience. I am very versatile where I am open-minded to new ideas and concepts especially when it comes to understanding different libraries from different languages in programming. </p>
 				</div>
 			</section>
 
