--- a/generic.html
+++ b/generic.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/2main.css" />
 	</head>
 	<body class="is-preload">
 
@@ -30,26 +30,62 @@
 
 		<!-- Heading -->
 			<div id="heading" >
-				<h1>All about my projects and links!</h1>
+				<h1>
+				 All about my projects and links!</h1>
 			</div>
 
 		<!-- Main -->
-			<section id="main" class="wrapper">
-				<div class="inner">
-					<div class="content">
-						<header>
-							<h2>Feugiat consequat</h2>
-						</header>
-						<p>THIS IS A TEST PARAGRAPH  </p>
-						<p> THIS IS A TEST PARAGRAPH + THIS IS A TEST PARAGRAPH </p>
-						<hr />
-						<h3>Magna odio tempus commodo</h3>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
-						<p>Felis sagittis eget tempus primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Magna sed etiam ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus lorem ipsum dolor sit amet nullam.</p>
-					</div>
-				</div>
-			</section>
 
+
+
+
+<p> <p>
+		
+
+			<!-- Wrapper -->
+		
+	
+							<!-- Thumbnails -->
+								<section class="thumbnails">
+									<div>
+										<a href="images/fulls/01.jpg">
+											<img src="images/thumbs/01.jpg" alt="" />
+											<h3>Lorem ipsum dolor sit amet</h3>
+										</a>
+										<a href="images/fulls/02.jpg">
+											<img src="images/thumbs/02.jpg" alt="" />
+											<h3>Lorem ipsum dolor sit amet</h3>
+										</a>
+									</div>
+									<div>
+										<a href="images/fulls/03.jpg">
+											<img src="images/thumbs/03.jpg" alt="" />
+											<h3>Lorem ipsum dolor sit amet</h3>
+										</a>
+										<a href="images/fulls/04.jpg">
+											<img src="images/thumbs/04.jpg" alt="" />
+											<h3>Lorem ipsum dolor sit amet</h3>
+										</a>
+										<a href="images/fulls/05.jpg">
+											<img src="images/thumbs/05.jpg" alt="" />
+											<h3>Lorem ipsum dolor sit amet</h3>
+										</a>
+									</div>
+									<div>
+										<a href="images/fulls/06.jpg">
+											<img src="images/thumbs/06.jpg" alt="" />
+											<h3>Lorem ipsum dolor sit amet</h3>
+										</a>
+										<a href="images/fulls/07.jpg">
+											<img src="images/thumbs/07.jpg" alt="" />
+											<h3>Lorem ipsum dolor sit amet</h3>
+										</a>
+									</div>
+								</section>
+	
+						</section>
+	
+			
 			<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
@@ -137,6 +173,8 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
 
 	</body>
 </html>
