--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						<section>
 							<div class="content">
 								<blockquote>
-									<p></p>
+									<p>"A fellow computer scientist peer of mine, he has excellent core skills in programming, he can program in a multiple choice of languages and has good knowledge/skill in mathematics and front-end UI."</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
@@ -140,7 +140,7 @@
 						<section>
 							<div class="content">
 								<blockquote>
-									<p></p>
+									<p>“An excellent leader, with a high level of experience with computers, I have worked with this individual to create a society in university where he created the entire platform for us to organize students’ electronic tickets and eventing detail, he certainly knows his tech!”</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
@@ -153,7 +153,7 @@
 						<section>
 							<div class="content">
 								<blockquote>
-									<p></p>
+									<p>“I have known Sandeep for over 10 years now and I can confidently say he’s extremely hard working and has a passion for technology, his core fundamental knowledge in computing and technology is remarkable. I would recommend you work with Sandeep if you ever get the opportunity because he always goes above and beyond.”</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
